--- a/static-site/index.html
+++ b/static-site/index.html
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-    <title>Nginx EC2</title>
+    <title>For Hacker U Solution</title>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
     <main class="main">
-        <h1>Hi, I'm Scotty</h1>
+        <h1>Hi, I'm yoni</h1>
     </main>
 </body>
 </html>
