--- a/static-site/index.html
+++ b/static-site/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>For Hacker U Solution</title>
+    <title>For Hacker U Solutions</title>
     <link href="index.css" rel="stylesheet">
 </head>
 <body>
